@@ -954,11 +954,15 @@ foreach (my $i = 1; $i <= 3; ++$i)
 show_ntests();
 # ----------
 $td->notify("--- Stream data ---");
-$n_tests += 1;
+$n_tests += 2;
 
 $td->runtest("get stream data",
 	     {$td->COMMAND => "test_driver 11 stream-data.pdf"},
 	     {$td->FILE => "test11.out", $td->EXIT_STATUS => 0},
+	     $td->NORMALIZE_NEWLINES);
+$td->runtest("get stream data fails on jpeg",
+	     {$td->COMMAND => "test_driver 68 jpeg-qstream.pdf"},
+	     {$td->FILE => "test68.out", $td->EXIT_STATUS => 0},
 	     $td->NORMALIZE_NEWLINES);
 
 show_ntests();
